src/scss/_general.scss
@use "lib/lib";
@use "lib/layout";

/* Заголовки */

.heading {
  margin: 0;

  @include lib.font-base(700, 18px, 1.5) {
    color: lib.$base-light;

    text: {
      align: center;
      transform: uppercase;
    }
  }

  &_size_large {
    font-size: 30px;
  }

  &_size_small {
    font-size: 16px;
  }

  &_weight_regular {
    font-weight: 400;
  }

  &_capitalized {
    text-transform: capitalize;
  }
}

.title {
  margin: 0;

  @include lib.font-base(700, 18px, 1.5) {
    color: lib.$base-light;
    text-transform: capitalize;
  }

  &_size_small {
    font-size: 12.8px;
  }

  &_uppercase {
    text-transform: uppercase;
  }
}

/* Текстовый контент */

.text {
  margin: 0;

  &_color_white {
    color: lib.$base-light;
  }

  &_color_gray {
    color: lib.$gray-medium;
  }
}

/* Кнопки, ссылки */

.button,
.link {
  $primary-color: lib.$base-light;

  display: inline-block;
  padding: 20px 30px;
  border: 0;
  border-radius: 5px;
  cursor: pointer;

  @include lib.font-base(400, 13px, 1.5) {
    @include lib.link-reset($primary-color);

    text: {
      align: center;
      transform: uppercase;
    }
  }

  &__icon {
    display: inline-block;
    width: 1.5em;
    height: 1.5em;
    margin-right: lib.base-x(2);
    vertical-align: middle;
    fill: $primary-color;
  }

  &_bg_green {
    background-color: lib.$green;
  }

  &_bg_brown {
    background-color: lib.$brown;
  }

  &_bg_blue {
    background-color: lib.$blue;
  }

  &_bg_none {
    border: 1px solid $primary-color;
    background-color: transparent;
  }

  &_theme_shaded {
    color: lib.$gray-medium;
    border-color: lib.$gray-medium;
  }

  &_text_left {
    text-align: left;
  }

  &_transform_none {
    text-transform: none;
  }

  &_rounded {
    border-radius: 32px;
  }

  &:hover {
    opacity: 0.95;
  }

  &:active {
    opacity: 0.85;
  }
}

/* Поля ввода */

.generic-input {
  display: inline-block;
  height: 50px;
  padding: 0 20px;
  border: 2px solid lib.$gray-medium;
  border-radius: 3px;
  background-color: transparent;

  @include lib.font-base(700, 14px, 16px) {
    color: lib.$base-light;
  }

  &::placeholder {
    color: lib.$base-light;
  }
}

.search-input {
  display: inline-block;
  height: 25px;
  padding: 0 10px;
  border: 0;
  border-radius: 50px;
  background-color: lib.$gray-dark;

  @include lib.font-base(400, 13px, 15px) {
    color: lib.$gray-medium;
    text-transform: uppercase;
  }

  &::placeholder {
    color: lib.$text-dark;
  }
}

/* ОБЩИЕ СТИЛИ ПРОЕКТА */

*,
::before,
::after {
  box-sizing: border-box;
}

html {
  height: 100%;
}

body {
  @include layout.sticky-footer;

  @include lib.font-base(400, 16px, 1.5) {
    font-family: Roboto, Arial, Helvetica, sans-serif;
    color: lib.$base-light;
  }

  background-color: lib.$base-dark;
}

.page-section {
  padding-top: 100px;

  &__heading {
    margin-bottom: lib.base-x(6);

    &_text_left {
      text-align: left;
    }
  }
}

.container {
  width: 100%;
  padding: 0 20px;
}

@media (min-width: 768px) {
  .heading {
    font-size: 38px;

    &_size_large {
      font-size: 60px;
    }

    &_size_small {
      font-size: 30px;
    }
  }

  .container {
    max-width: lib.$content-width;
    margin: 0 auto;
  }
}

